--- a/src/Components/App/styles.css
+++ b/src/Components/App/styles.css
@@ -1,7 +1,7 @@
 .header {
   position: sticky;
   top: 0;
-  background-color: "white";
+  background-color: white;
   padding: 1.5rem 3rem;
   display: flex;
   justify-content: space-between;
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 1rem;
+  gap: 1.4rem;
 }
 .links-flex a {
   text-decoration: none;
@@ -28,7 +28,7 @@
   color: black;
   font-weight: 600;
   margin: 0px;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
 }
 
 .link:hover {
@@ -59,5 +59,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  }
+  .mobile-drawer a {
+    text-decoration: none;
   }
 }
