--- a/src/Components/Common/EnquiryForm/styles.css
+++ b/src/Components/Common/EnquiryForm/styles.css
@@ -4,8 +4,8 @@
   right: 20px;
   width: 300px;
   height: 60px;
-  background-color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: black;
+  /* box-shadow: 0 0 25px rgba(0, 0, 0, 0.2); */
   transition: transform 0.5s;
   z-index: 999;
 }
@@ -19,18 +19,27 @@
   height: 60px;
   line-height: 60px;
   text-align: center;
-  background-color: var(--textPrimary);
-  color: #ffffff;
+  background-color: white;
+  color: var(--textPrimary);
   font-size: 16px;
   cursor: pointer;
+  font-weight: 700;
+  border: 4px solid black;
 }
 
 .form-content {
   display: none;
-  background: #f5f5f5;
+  background: black;
   padding: 10px;
   animation: revealContent 0.5s forwards;
   height: fit-content;
+}
+
+.form-content input {
+  background-color: transparent;
+  border-bottom: 2px solid white;
+  border-top: none;
+  border-right: none;
 }
 
 @keyframes revealContent {
