--- a/src/Components/Pages/Home/styles.css
+++ b/src/Components/Pages/Home/styles.css
@@ -2,8 +2,9 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 1.5rem 6rem;
+  padding: 1.5rem 10rem;
   min-height: 90vh;
+  margin-bottom: 2rem;
 }
 .heading-1,
 .heading-2 {
@@ -30,9 +31,9 @@
 }
 .landing-right {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
   margin-left: auto;
-  position: relative;
+  align-items: left;
 }
 
 .gradient {
@@ -43,13 +44,6 @@
   z-index: 0;
 }
 
-.iphone {
-  position: absolute;
-  max-width: 380px;
-  object-fit: contain;
-  z-index: 1;
-  right: 0rem;
-}
 .btn-flex {
   margin-top: 2rem;
   display: flex;
@@ -74,6 +68,18 @@
 .home-links-flex a:hover {
   color: black;
   transition: all 0.5s;
+}
+.how-we-market-list {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+  gap: 54px;
+  letter-spacing: 0.1em;
+}
+.how-we-market-list div {
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 @media only screen and (max-width: 1250px) {
   .landing-left {
