--- a/src/Components/Pages/Home/styles.css
+++ b/src/Components/Pages/Home/styles.css
@@ -6,9 +6,7 @@
   min-height: 90vh;
   margin-bottom: 1.8rem;
 }
-.landing-left-worq {
-  padding: 1.5rem 10rem;
-}
+
 .heading-1,
 .heading-2 {
   font-size: 6.5rem;
@@ -84,6 +82,23 @@
   align-items: center;
   gap: 4px;
 }
+
+/* Past Worq Screen Styles */
+.landing-wrapper-worq {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  min-height: 90vh;
+  margin-bottom: 1.8rem;
+}
+.landing-left-worq {
+  padding: 0 0 0 10rem;
+  width: 50rem;
+}
+.landing-right-worq {
+  padding: 0 10rem 0 0;
+}
+
 @media only screen and (max-width: 1250px) {
   .landing-left {
     width: 60%;
