--- a/src/Components/Pages/Home/Components/styles/howWeMarqet.css
+++ b/src/Components/Pages/Home/Components/styles/howWeMarqet.css
@@ -5,9 +5,17 @@
   padding: 1.5rem 9rem;
   min-height: 90vh;
   margin-bottom: 1.8rem;
-  width: 100%;
 }
-
+.hypeItUp {
+  color: #1da1f2;
+  font-size: 1.5rem;
+}
+.market-list-open {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px;
+}
 .landing-right-market {
   display: flex;
   flex-direction: column;
@@ -18,7 +26,15 @@
 .landing-left-market {
   position: absolute;
 }
-
+.heading-2-market {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.market-list-open-div {
+  display: flex;
+  align-items: center;
+}
 .how-we-market-list {
   display: flex;
   flex-direction: column;
@@ -35,4 +51,152 @@
   width: 30rem;
   line-height: 1.15312464em;
   font-size: 1.4rem;
+}
+/* 
+@media (min-width: 1200px) and (max-width: 1599px) {
+  .landing-wrapper-market {
+    padding: 1.5rem 9rem;
+  }
+  .landing-left-market {
+    width: 60%;
+  }
+
+  .heading-1,
+  .heading-2-market {
+    font-size: 5rem;
+  }
+  .para-market {
+    font-size: 1.5rem;
+  }
+  .q-class {
+    font-size: 6rem;
+  }
+} */
+@media (min-width: 1024px) and (max-width: 1199px) {
+  .landing-wrapper-market {
+    padding: 1.5rem 2rem;
+  }
+  .heading-1,
+  .heading-2-market {
+    font-size: 5rem;
+  }
+  .para-market {
+    font-size: 1.5rem;
+    width: 35rem;
+  }
+  .q-class {
+    font-size: 6rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .landing-wrapper-market {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 1.5rem 3rem;
+  }
+
+  .landing-left-market {
+    width: 100%;
+    position: static;
+  }
+  .landing-right-market {
+    justify-content: center;
+    margin-right: auto;
+    margin-top: 4rem;
+    position: static;
+    margin-left: 0;
+  }
+
+  .heading-1,
+  .heading-2-market {
+    font-size: 4.5rem;
+  }
+  .q-class {
+    width: 5rem;
+  }
+  .para-market {
+    font-size: 1.5rem;
+    width: 35rem;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .landing-wrapper-market {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 1.5rem 3rem;
+  }
+
+  .landing-left-market {
+    width: 100%;
+    position: static;
+  }
+  .landing-right-market {
+    justify-content: center;
+    margin-top: 4rem;
+    position: static;
+    align-items: flex-start;
+    margin-left: 0;
+  }
+  .heading-1,
+  .heading-2-market {
+    font-size: 4rem;
+  }
+  .q-class {
+    width: 5rem;
+  }
+
+  .para-market {
+    font-size: 1.2rem;
+    width: 28rem;
+  }
+
+  .btn-flex {
+    justify-content: center;
+  }
+  .how-we-market-list {
+    margin-top: 30px;
+    font-size: 1rem;
+    gap: 50px;
+  }
+}
+
+@media (max-width: 480px) {
+  .landing-wrapper-market {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 1.5rem 2rem;
+    gap: 20px;
+  }
+  .how-we-market-list {
+    font-size: 0.8rem;
+    gap: 20px;
+    letter-spacing: 0.1em;
+    align-items: flex-start;
+    margin: auto;
+    width: fit-content;
+  }
+  .landing-right-market {
+    margin: 0px;
+    position: static;
+  }
+  .heading-1,
+  .heading-2-market {
+    font-size: 3rem;
+  }
+  .landing-left-market {
+    position: static;
+    width: 100%;
+  }
+  .q-class {
+    width: 4rem;
+  }
+  .para-market {
+    font-size: 1rem;
+    width: 22rem;
+  }
 }
