--- a/src/Components/Pages/Home/Components/styles/spectacularClients.css
+++ b/src/Components/Pages/Home/Components/styles/spectacularClients.css
@@ -42,3 +42,107 @@
   filter: grayscale(0);
   transform: scale(1.1);
 }
+
+.q-class-clients {
+  width: 4.5rem;
+}
+
+@media (min-width: 1200px) and (max-width: 1599px) {
+  .landing-clients-wrapper {
+    padding: 1.5rem 9rem;
+  }
+
+  .landing-footer-left {
+    width: 60%;
+    padding-left: 0;
+  }
+
+  .q-class-clients {
+    width: 4.5rem;
+  }
+
+  .heading-clients {
+    font-size: 4rem;
+  }
+
+  .client-logo {
+    width: 12rem;
+  }
+  .row-1,
+  .row-2 {
+    gap: 30px;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1199px) {
+  .landing-wrapper-clients {
+    padding: 1.5rem 3rem;
+  }
+  .q-class-clients {
+    width: 3.5rem;
+  }
+  .heading-clients {
+    font-size: 3rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .landing-clients-wrapper {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem 3rem;
+  }
+  .heading-clients {
+    font-size: 3rem;
+  }
+  .q-class-clients {
+    width: 3.5rem;
+  }
+  .client-logo {
+    width: 10rem;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .landing-clients-wrapper {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem 3rem;
+  }
+  .q-class-clients {
+    width: 2.5rem;
+  }
+  .heading-clients {
+    font-size: 2rem;
+  }
+  .client-logo {
+    width: 10.5rem;
+    height: 18rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .landing-clients-wrapper {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem 2rem;
+    gap: 0px;
+  }
+
+  .heading-clients {
+    font-size: 1.5rem;
+  }
+  .clients {
+    margin-top: 0rem;
+  }
+
+  .q-class-clients {
+    width: 2rem;
+  }
+  .client-logo {
+    width: 9.5rem;
+    height: 15rem;
+  }
+}
