Socially Active Fixes

--- a/src/Components/Common/EnquiryForm/styles.css
+++ b/src/Components/Common/EnquiryForm/styles.css
@@ -1,7 +1,7 @@
 .enquiry-form {
   position: fixed;
   bottom: 0;
-  right: 20px;
+  right: 9%;
   width: 300px;
   height: 60px;
   background-color: black;
